--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/mandelbrot.py", "use": "@vercel/python" }
-  ],
-  "rewrites": [
-    { "source": "/api/mandelbrot", "destination": "/api/mandelbrot.py" }
+    { "src": "api/*.py", "use": "@vercel/python" }
   ]
 }
