for vercel deploy now

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,12 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "api/*.py", "use": "@vercel/python" }
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "functions": {
+    "api/index.py": {
+      "runtime": "python",
+      "includeFiles": "webapp.py,mandelbrot.py,templates/**,static/**"
+    }
+  },
+  "routes": [
+    { "src": "/(.*)", "dest": "/api/index.py" }
   ]
 }
