--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "functions": {
-    "api/**/*.py": {
-      "maxDuration": 60,
+    "api/index.py": {
       "includeFiles": "webapp.py,mandelbrot.py,templates/**,static/**"
     }
   },
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/api/index" }
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/api/index.py" }
   ]
 }
